--- a/Sprint4/Task0.ipynb
+++ b/Sprint4/Task0.ipynb
@@ -159,7 +159,84 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "public abstract class Vehicle : IVehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public virtual void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Автомобиль готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Автомобиль полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int amount)\n",
+    "    {\n",
+    "        currentSpeed += amount;\n",
+    "        Console.WriteLine($\"Автомобиль разгоняется до {currentSpeed} км/ч.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public bool HasSidecar { get; set; }\n",
+    "\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        base.Start();\n",
+    "        Console.WriteLine(\"Мотоцикл готов к поездке.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        base.Stop();\n",
+    "        Console.WriteLine(\"Мотоцикл полностью остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RevEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +261,76 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "\n",
+    "    public string Gender { get; set; }\n",
+    "\n",
+    "    public Animal(string type, string gender)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Gender = gender;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вид: {Type}, Пол: {Gender}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public bool Hunting { get; set; }\n",
+    "\n",
+    "    public Dog(string type, string gender, bool hunting) : base(type, gender)\n",
+    "    {\n",
+    "        Hunting = hunting;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Для охоты: {Hunting}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool Predator { get; set; }\n",
+    "    public Cat(string type, string gender, bool predator) : base(type, gender)\n",
+    "    {\n",
+    "        Predator = predator;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Хищник: {Predator}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public bool Waterfowl { get; set; }\n",
+    "    public Bird(string type, string gender, bool waterfowl) : base(type, gender)\n",
+    "    {\n",
+    "        Waterfowl = waterfowl;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Водоплавающее: {Waterfowl}\");\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
