--- a/Sprint4/Task2.ipynb
+++ b/Sprint4/Task2.ipynb
@@ -160,7 +160,67 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();            \n",
+    "    void Stop();             \n",
+    "    int GetNumberOfWheels();\n",
+    "}\n",
+    "\n",
+    "public class Car : IVehicle\n",
+    "{\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина запущена.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Машина остановлена.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 4;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : IVehicle\n",
+    "{\n",
+    "    public void Start()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Stop()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public int GetNumberOfWheels()\n",
+    "    {\n",
+    "        return 2; \n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class VehicleService\n",
+    "{\n",
+    "    private readonly IVehicle _vehicle;\n",
+    "\n",
+    "    public VehicleService(IVehicle vehicle)\n",
+    "    {\n",
+    "        _vehicle = vehicle; \n",
+    "    }\n",
+    "\n",
+    "    public void UseVehicle()\n",
+    "    {\n",
+    "        _vehicle.Start();\n",
+    "        Console.WriteLine($\"У этого транспортного средства {_vehicle.GetNumberOfWheels()} колеса.\");\n",
+    "        _vehicle.Stop();\n",
+    "    }\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,8 +244,117 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вид: овчарка, Пол: женский\n",
+      "Для охоты: True\n",
+      "Вид: Сфинкс, Пол: Мужской\n",
+      "Хищник: False\n",
+      "Вид: Воробей, Пол: Мужской\n",
+      "Водоплавающее: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Type { get; set; }\n",
+    "\n",
+    "    public string Gender { get; set; }\n",
+    "\n",
+    "    public Animal(string type, string gender)\n",
+    "    {\n",
+    "        Type = type;\n",
+    "        Gender = gender;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Вид: {Type}, Пол: {Gender}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public bool Hunting { get; set; }\n",
+    "\n",
+    "    public Dog(string type, string gender, bool hunting) : base(type, gender)\n",
+    "    {\n",
+    "        Hunting = hunting;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Для охоты: {Hunting}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public bool Predator { get; set; }\n",
+    "    public Cat(string type, string gender, bool predator) : base(type, gender)\n",
+    "    {\n",
+    "        Predator = predator;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Хищник: {Predator}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public bool Waterfowl { get; set; }\n",
+    "    public Bird(string type, string gender, bool waterfowl) : base(type, gender)\n",
+    "    {\n",
+    "        Waterfowl = waterfowl;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Водоплавающее: {Waterfowl}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AnimalInfo\n",
+    "{\n",
+    "    private readonly IAnimal _animal;\n",
+    "\n",
+    "    public AnimalInfo(IAnimal animal)\n",
+    "    {\n",
+    "        _animal = animal; \n",
+    "    }\n",
+    "\n",
+    "    public void GetInfo()\n",
+    "    {\n",
+    "        _animal.DisplayInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal myDog = new Dog(\"овчарка\", \"женский\", true); \n",
+    "AnimalInfo dogInfo = new AnimalInfo(myDog); \n",
+    "dogInfo.GetInfo(); \n",
+    "\n",
+    "IAnimal myCat = new Cat(\"Сфинкс\", \"Мужской\", false); \n",
+    "AnimalInfo catInfo = new AnimalInfo(myCat); \n",
+    "catInfo.GetInfo(); \n",
+    "\n",
+    "IAnimal myBird = new Bird(\"Воробей\", \"Мужской\", false); \n",
+    "AnimalInfo birdInfo = new AnimalInfo(myBird); \n",
+    "birdInfo.GetInfo(); "
+   ]
   }
  ],
  "metadata": {
