--- a/Sprint4/Task3.ipynb
+++ b/Sprint4/Task3.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "----\n",
     "\n",
-    "### Вариант задания \n"
+    "### Вариант задания 5\n"
    ]
   },
   {
@@ -26,7 +26,32 @@
     "\n",
     "----\n",
     "\n",
-    "[ваш текст]\n",
+    "Создать базовый класс Book в C#, который будет представлять информацию о\n",
+    "книгах. На основе этого класса разработать 2-3 производных класса,\n",
+    "демонстрирующих принципы наследования и полиморфизма. В каждом из классов\n",
+    "должны быть реализованы новые атрибуты и методы, а также переопределены\n",
+    "некоторые методы базового класса для демонстрации полиморфизма.\n",
+    "\n",
+    "Требования к базовому классу Book:\n",
+    "• Атрибуты: Название (Title), Автор (Author), Год издания (YearOfPublication).\n",
+    "• Методы:\n",
+    "o GetInfo(): метод для получения информации о книге в виде строки.\n",
+    "o Read(): метод для вывода сообщения о чтении книги.\n",
+    "o Borrow(): метод для вывода сообщения о выдаче книги на чтение.\n",
+    "\n",
+    "Требования к производным классам:\n",
+    "1. Учебник (Textbook): Должен содержать дополнительные атрибуты, такие как\n",
+    "Предмет (Subject). Метод Read() должен быть переопределен для\n",
+    "добавления информации о предмете при чтении учебника.\n",
+    "2. Художественная литература (Fiction): Должен содержать дополнительные\n",
+    "атрибуты, такие как Жанр (Genre). Метод Borrow() должен быть\n",
+    "переопределен для добавления информации о жанре при выдаче книги на\n",
+    "чтение.\n",
+    "3. Научная литература (ScientificLiterature) (если требуется третий класс):\n",
+    "Должен содержать дополнительные атрибуты, такие как Область науки\n",
+    "(FieldOfScience). Метод GetInfo() должен быть переопределен для включения\n",
+    "информации об области науки в описании книги.\n",
+    "\n",
     "\n",
     "#### Дополнительное задание\n",
     "Добавьте к сущестующим классам (базовыму и производным 3-4 атрибута и метода) создайте явную реализации интерфейса и управление зависимостями \n"
@@ -53,7 +78,271 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "public interface IBook\n",
+    "{\n",
+    "    void PrintISBN();\n",
+    "    void Share();\n",
+    "}\n",
+    "\n",
+    "public abstract class Book : IBook\n",
+    "{\n",
+    "    public string Title { get; set; }\n",
+    "    public string Author { get; set; }\n",
+    "    public int YearOfPublication { get; set; }\n",
+    "    public string ISBN { get; set; }\n",
+    "    public int PageCount { get; set; }\n",
+    "    public string Publisher { get; set; }\n",
+    "    public string Language { get; set; }\n",
+    "    public string Description { get; set; }\n",
+    "    public int CopiesAvailable { get; set; }\n",
+    "    public double Price { get; set; }\n",
+    "    public double Rating { get; set; }\n",
+    "    public bool IsCheckedOut { get; set; }\n",
+    "\n",
+    "    public Book(string title, string author, int yearOfPublication, string isbn, int pageCount, string publisher,\n",
+    "        string language, string description, double price, int copiesAvailable)\n",
+    "    {\n",
+    "        Title = title;\n",
+    "        Author = author;\n",
+    "        YearOfPublication = yearOfPublication;\n",
+    "        ISBN = isbn;\n",
+    "        PageCount = pageCount;\n",
+    "        Publisher = publisher;\n",
+    "        Language = language;\n",
+    "        Description = description;\n",
+    "        Price = price;\n",
+    "        CopiesAvailable = copiesAvailable;\n",
+    "        IsCheckedOut = false;\n",
+    "    }\n",
+    "\n",
+    "    public virtual string GetInfo()\n",
+    "    {\n",
+    "        return $\"Title: {Title}, Author: {Author}, Year: {YearOfPublication}, ISBN: {ISBN}, Pages: {PageCount}, Publisher: {Publisher}, Language: {Language}, Price: {Price}, Available Copies: {CopiesAvailable}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Read()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Reading the book: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Borrow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Borrowing the book: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void Review()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Reviewing the book: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual void PrintSummary()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Summary of {Title}: {Description}\");\n",
+    "    }\n",
+    "\n",
+    "    public virtual string GetInfo(bool detailLevel)    \n",
+    "    {    \n",
+    "        return detailLevel ? GetInfo() : $\"Title: {Title}, Author: {Author}\";\n",
+    "    }\n",
+    "\n",
+    "    void IBook.PrintISBN()\n",
+    "    {\n",
+    "        Console.WriteLine($\"ISBN: {ISBN}\");\n",
+    "    }\n",
+    "\n",
+    "    void IBook.Share()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Sharing the book: {Title}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class BookService\n",
+    "{\n",
+    "    private readonly IBook _book;\n",
+    "\n",
+    "    public BookService(IBook book)\n",
+    "    {\n",
+    "        _book = book; \n",
+    "    }\n",
+    "\n",
+    "    public void UseBook()\n",
+    "    {\n",
+    "        _book.PrintISBN();\n",
+    "        _book.Share();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Textbook : Book\n",
+    "{\n",
+    "    public string Subject { get; set; }\n",
+    "    public string Edition { get; set; }\n",
+    "\n",
+    "    public Textbook(string title, string author, int yearOfPublication, string subject, string isbn, int pageCount, string publisher, string language, string description, string edition, double price, int copiesAvailable)\n",
+    "        : base(title, author, yearOfPublication, isbn, pageCount, publisher, language, description, price, copiesAvailable)\n",
+    "    {\n",
+    "        Subject = subject;\n",
+    "        Edition = edition;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Reading the textbook: {Title} on subject: {Subject}\");\n",
+    "    }\n",
+    "\n",
+    "    public void SolveProblems()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Solving problems in the textbook: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void PrintSummary()\n",
+    "    {\n",
+    "        base.PrintSummary();\n",
+    "        Console.WriteLine($\"This textbook covers the subject: {Subject}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Fiction : Book\n",
+    "{\n",
+    "    public string Genre { get; set; }\n",
+    "    public bool IsBestSeller { get; set; }\n",
+    "\n",
+    "    public Fiction(string title, string author, int yearOfPublication, string genre, string isbn, int pageCount, string publisher, string language, string description, bool isBestSeller, double price, int copiesAvailable)\n",
+    "        : base(title, author, yearOfPublication, isbn, pageCount, publisher, language, description, price, copiesAvailable)\n",
+    "    {\n",
+    "        Genre = genre;\n",
+    "        IsBestSeller = isBestSeller;\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        base.Borrow();\n",
+    "        Console.WriteLine(IsBestSeller ? \"This is a bestseller!\" : \"This is not a bestseller.\");\n",
+    "    }\n",
+    "\n",
+    "    public void Recommend()\n",
+    "    {\n",
+    "        Console.WriteLine($\"I recommend reading the fiction book: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void PrintSummary()\n",
+    "    {\n",
+    "        base.PrintSummary();\n",
+    "        Console.WriteLine($\"This fiction book belongs to the genre: {Genre}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class ScientificLiterature : Book\n",
+    "{\n",
+    "    public string FieldOfScience { get; set; }\n",
+    "\n",
+    "    public ScientificLiterature(string title, string author, int yearOfPublication, string fieldOfScience, string isbn, int pageCount, string publisher, string language, string description, double price, int copiesAvailable)\n",
+    "        : base(title, author, yearOfPublication, isbn, pageCount, publisher, language, description, price, copiesAvailable)\n",
+    "    {\n",
+    "        FieldOfScience = fieldOfScience;\n",
+    "    }\n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return base.GetInfo() + $\", Field of Science: {FieldOfScience}\";\n",
+    "    }\n",
+    "\n",
+    "    public void ConductResearch()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Conducting research based on the scientific literature: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void PrintSummary()\n",
+    "    {\n",
+    "        base.PrintSummary();\n",
+    "        Console.WriteLine($\"This scientific literature focuses on: {FieldOfScience}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class AdvancedTextbook : Textbook\n",
+    "{\n",
+    "    public string DifficultyLevel { get; set; }\n",
+    "\n",
+    "    public AdvancedTextbook(string title, string author, int yearOfPublication, string subject, string difficultyLevel, string isbn, int pageCount, string publisher, string language, string description, string edition, double price, int copiesAvailable)\n",
+    "        : base(title, author, yearOfPublication, subject, isbn, pageCount, publisher, language, description, edition, price, copiesAvailable)\n",
+    "    {\n",
+    "        DifficultyLevel = difficultyLevel;\n",
+    "    }\n",
+    "\n",
+    "    public void CreateAssignments()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Creating assignments for the advanced textbook: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void PrintSummary()\n",
+    "    {\n",
+    "        base.PrintSummary();\n",
+    "        Console.WriteLine($\"Difficulty level of this advanced textbook: {DifficultyLevel}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public interface IReadable\n",
+    "{\n",
+    "    void Read();\n",
+    "}\n",
+    "\n",
+    "public interface IBorrowable\n",
+    "{\n",
+    "    void Borrow();\n",
+    "}\n",
+    "\n",
+    "public class EBook : Book, IReadable, IBorrowable\n",
+    "{\n",
+    "    public string FileFormat { get; set; }\n",
+    "\n",
+    "    public EBook(string title, string author, int yearOfPublication, string fileFormat, string isbn, int pageCount, string publisher, string language, string description, double price, int copiesAvailable)\n",
+    "        : base(title, author, yearOfPublication, isbn, pageCount, publisher, language, description, price, copiesAvailable)\n",
+    "    {\n",
+    "        FileFormat = fileFormat;\n",
+    "    }\n",
+    "\n",
+    "    public override void Read()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Reading the eBook: {Title} in {FileFormat} format\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Borrow()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Borrowing the eBook: {Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public override void PrintSummary()\n",
+    "    {\n",
+    "        base.PrintSummary();\n",
+    "        Console.WriteLine($\"This eBook is in {FileFormat} format.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class BookCollection<T> where T : Book\n",
+    "{\n",
+    "    private List<T> books = new List<T>();\n",
+    "\n",
+    "    public void AddBook(T book)\n",
+    "    {\n",
+    "        books.Add(book);\n",
+    "        Console.WriteLine($\"Added book: {book.Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public void RemoveBook(T book)\n",
+    "    {\n",
+    "        books.Remove(book);\n",
+    "        Console.WriteLine($\"Removed book: {book.Title}\");\n",
+    "    }\n",
+    "\n",
+    "    public void ShowAllBooks()\n",
+    "    {\n",
+    "        foreach (var book in books)\n",
+    "        {\n",
+    "            Console.WriteLine(book.GetInfo());\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
