--- a/Sprint2/Task1.ipynb
+++ b/Sprint2/Task1.ipynb
@@ -256,7 +256,29 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Вид: Овчарка, Пол: Женский\n",
+      "Для охоты: True\n",
+      "Вид: Самоед, Пол: Мужской\n",
+      "Для охоты: True\n",
+      "Длинношерстное: True\n",
+      "Вид: Сфинкс, Пол: Мужской\n",
+      "Хищник: False\n",
+      "Вид: Персидская, Пол: Мужской\n",
+      "Хищник: False\n",
+      "Длинношерстное: True\n",
+      "Вид: Воробей, Пол: Мужской\n",
+      "Водоплавающее: False\n",
+      "Вид: Курица, Пол: Женский\n",
+      "Водоплавающее: False\n",
+      "Поет: False\n"
+     ]
+    }
+   ],
    "source": [
     "public class Animal\n",
     "{\n",
